--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,33 @@
 # For more information about tox, see https://tox.readthedocs.io/en/latest/
 [tox]
-envlist = py36,py37,py38,pypy,flake8
+envlist = py{37,38,39}-{linux,macos,windows}
+toxworkdir=/tmp/.tox
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    
+[gh-actions:env]
+PLATFORM =
+    ubuntu-latest: linux
+    macos-latest: macos
+    windows-latest: windows
 
 [testenv]
-deps = napari>=0.2.11
-       pytest
-commands = pytest {posargs:tests}
-
-[testenv:flake8]
-skip_install = true
-deps = flake8
-commands = flake8 napari_dv.py setup.py tests
+platform = 
+    macos: darwin
+    linux: linux
+    windows: win32
+passenv = 
+    CI
+    GITHUB_ACTIONS
+    DISPLAY XAUTHORITY
+    NUMPY_EXPERIMENTAL_ARRAY_FUNCTION
+    PYVISTA_OFF_SCREEN
+deps = 
+    pytest  # https://docs.pytest.org/en/latest/contents.html
+    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
+    numpy
+commands = pytest -v --color=yes --cov=napari_dv --cov-report=xml {posargs}
