--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -6,13 +6,11 @@ name: tests
 on: 
   push:
     branches:
-      - master
       - main
     tags:
       - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
   pull_request:
     branches:
-      - master
       - main
   workflow_dispatch:
 
@@ -23,7 +21,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, '3.10']
 
     steps:
       - uses: actions/checkout@v2
@@ -33,35 +31,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      # # these libraries, along with pytest-xvfb (added in the `deps` in tox.ini),
-      # # enable testing on Qt on linux
-      # - name: Install Linux libraries
-      #   if: runner.os == 'Linux'
-      #   run: |
-      #     sudo apt-get install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
-      #       libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
-      #       libxcb-xinerama0 libxcb-xinput0 libxcb-xfixes0
-
-      # # strategy borrowed from vispy for installing opengl libs on windows
-      # - name: Install Windows OpenGL
-      #   if: runner.os == 'Windows'
-      #   run: |
-      #     git clone --depth 1 git://github.com/pyvista/gl-ci-helpers.git
-      #     powershell gl-ci-helpers/appveyor/install_opengl.ps1
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools tox tox-gh-actions
+          pip install -e .[testing]
 
-      # this runs the platform-specific tests declared in tox.ini
       - name: Test with tox
-        run: tox
-        env:
-          PLATFORM: ${{ matrix.platform }}
+        run: pytest -v --color=yes --cov=napari_dv --cov-report=xml
 
       - name: Coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
 
   deploy:
     # this will run when you have tagged a commit, starting with "v*"
@@ -79,12 +58,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -U setuptools setuptools_scm wheel twine
+          pip install -U twine build
       - name: Build and publish
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.TWINE_API_KEY }}
         run: |
           git tag
-          python setup.py sdist bdist_wheel
+          python -m build
+          twine check
           twine upload dist/*
