--- a/setup.cfg
+++ b/setup.cfg
@@ -34,12 +34,15 @@ install_requires =
     napari-plugin-engine>=0.1.4
 python_requires = >=3.7
 include_package_data = True
-setup_requires =
-    setuptools-scm
 
 [options.entry_points]
 napari.manifest =
     napari-dv = napari_dv:napari.yaml
+
+[options.extras_require]
+testing =
+    numpy
+    pytest
 
 [options.package_data]
 * = *.yaml
