--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -31,6 +31,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - uses: tlambert03/napari-plugin-action@main
+        with:
+          package_name: napari-dv
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
