--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,3 +38,7 @@ repos:
     rev: v0.941
     hooks:
       - id: mypy
+  - repo: https://github.com/tlambert03/napari-plugin-checks
+    rev: v0.2.0
+    hooks:
+      - id: napari-plugin-checks
